                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 09-09-2006 fixed: ts (or any files with a 2 char extension) files wouldn't play over smb.
 - 09-09-2006 updated: German language file
 - 08-09-2006 fixed: Edit XBE Title was enabled for profiles that didn't have database access.
 - 08-09-2006 fixed: Delete and Rename were sometimes active on parent folder items.
 - 08-09-2006 fixed: Added workaround for iTunes v2.4 tag bug to libid3tag to allow us to load these (incorrect) tags.
 - 08-09-2006 changed: Settings screens reordered.
 - 08-09-2006 fixed: no info scanned for this view message didn't follow animations.
 - 07-09-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 07-09-2006 updated: Spanish language file (Thnx to jose_t)
 - 07-09-2006 updated: Norwegian language file (Thnx to vnm)
 - 07-09-2006 updated: Indonesian language file (Thnx to djoens)
 - 07-09-2006 updated: Polish language file (Thnx to napek)
 - 07-09-2006 updated: Chinese (Simple) language file (Thnx to gamepc)
 - 07-09-2006 updated: Italian language file (Thnx to kotix)
 - 07-09-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 07-09-2006 updated: Catalan language file (Thnx to buc)
 - 07-09-2006 updated: Swedish language file (Thnx to blittan)
 - 07-09-2006 updated: Portuguese (Brazil) language file (Thnx to mvbm)
 - 07-09-2006 updated: Slovenian language file (Thnx to xsiluro)
 - 07-09-2006 fixed: Weather would create a file on Z: unnecessarily.